Fix spacing for longer texts in Plana flyout menue.

--- a/public/osec_themes/plana/less/override.less
+++ b/public/osec_themes/plana/less/override.less
@@ -122,7 +122,6 @@
 	white-space: nowrap;
 	.ai1ec-fa.ai1ec-fa-fw {
 		width: 20px;
-		margin-left: 1em;
 	}
 }
 
