--- a/public/osec_themes/plana/less/plana-flyout-menu.less
+++ b/public/osec_themes/plana/less/plana-flyout-menu.less
@@ -71,8 +71,9 @@
     width: inherit;
     text-decoration: none;
     display: flex;
+    align-items: baseline;
     line-height: @lineheight;
-    align-items: center;
+    white-space: normal;
     padding-left: .6em;
     padding-right: .6em;
     font-size: .9em;
